* class.c (rewrite_cref_stack, clone_method): rewrite a method's cref   stack when cloning into a new class to allow lexical const lookup to   work as expected [ruby-core:47834] [Bug #7107] * test/ruby/test_class.rb (class TestClass): related test

git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@38423 b2dd03c8-39d4-4d8f-98ff-823fe69b080e